adding styles based on logic in the component class,or target expression

--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,8 +1,4 @@
 <h2 [style]="currentStyles">product-list works!</h2>
-<ul>
-  <li (click)="selectorProduct='Webcam'">Webcam</li>
-  <li (click)="selectorProduct='Microphone'">Microphone</li>
-  <li (click)="selectorProduct='Wireless Keyboard'">Wireless Keyboard</li>
-  <li (click)="selectorProduct= onClick()">Wireless Keyboard</li>
+<ul *ngFor="let prods of selectorProduct" #prod>
+  <li [class.morethan5item]="getToPassCssFromHere()">{{prods.name}}</li>
 </ul>
-<app-product-detail #product [name]="selectorProduct" (bought)="onBuy($event)"></app-product-detail>
