--- a/src/app/products/product-detail/product-detail.component.html
+++ b/src/app/products/product-detail/product-detail.component.html
@@ -1,5 +1,5 @@
 <h2>Product Details</h2>
-<h3>{{name}}</h3>
+<h3>{{product}}</h3>
 <button (click)="buy()">Buy Now</button>
 <br>
-<span>{{productName}}</span>
+<!-- <span>{{productName}}</span> -->
