feat: added responsive cards

--- a/src/app/product-list/product-list.component.css
+++ b/src/app/product-list/product-list.component.css
@@ -2,3 +2,60 @@
   color: green;
   background-color: aqua;
 }
+.card{
+ width: 20%;
+ height: auto;
+ border: 1px solid #ccc;
+ border-radius: 10px;
+ transition: 0.9;
+ margin: 1%;
+}
+.card:hover{
+  box-shadow:0.0 2px 2px  2px rgba(190, 185, 185, 0.5);
+  cursor: pointer;
+}
+img{
+  width: 100%;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  background-color: #ccc;
+  border-bottom:1px solid beige ;
+}
+.myProducts{
+  margin: 30px auto;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  flex-wrap: wrap;
+  width: 1080px;
+  height: auto;
+}
+p,h3{text-align: center;
+color: rgb(104,92,92);
+}
+p{
+  font-size: 15px;
+  padding: 0.5px;
+}
+@media (max-width:800px) {
+  .myProducts{
+    width:100%
+  }
+}
+@media (max-width:600px) {
+  .myProducts{
+    width:85%;
+  }
+  .card{
+    width: 100%;
+    margin-bottom: 4%;
+  } 
+}
+.card-header{
+  background-color: rgb(255, 153, 0);
+  width: 35%;
+  margin-top: -7%;
+  margin-left: -2%;
+  border-bottom-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
