--- a/src/app/product-list/product-list.component.css
+++ b/src/app/product-list/product-list.component.css
@@ -3,7 +3,7 @@
   background-color: aqua;
 }
 .card{
- width: 20%;
+ width: 17%;
  height: auto;
  border: 1px solid #ccc;
  border-radius: 10px;
@@ -11,11 +11,14 @@
  margin: 1%;
 }
 .card:hover{
-  box-shadow:0.0 2px 2px  2px rgba(190, 185, 185, 0.5);
+  box-shadow:0.0 2px 2px rgba(190, 185, 185, 0.5);
   cursor: pointer;
+  background-color: rgb(233, 233, 225);
 }
+.img
 img{
   width: 100%;
+  
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   background-color: #ccc;
@@ -51,11 +54,14 @@ p{
     margin-bottom: 4%;
   } 
 }
-.card-header{
-  background-color: rgb(255, 153, 0);
-  width: 35%;
-  margin-top: -7%;
-  margin-left: -2%;
-  border-bottom-left-radius: 10px;
-  border-top-right-radius: 10px;
+.bestseller{
+  background-color: rgb(238, 238, 20);
+  margin-top: -6%;
+  margin-left: -3%;
 }
+.newprod{
+  background-color: rgb(129, 230, 125);
+  margin-top: -6%;
+  margin-left: -3%;
+}
+/*  */
