add element add to cart

--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -9,8 +9,6 @@
       </p>
       <p *ngSwitchDefault style="display: none;">again
       </p>
-
-
     </div>
     <div class=" card-body">
       <div class="img">
@@ -19,7 +17,9 @@
     </div>
     <div class="card-footer">
       <h3>{{prods.name}}</h3>
+      <p class="addtocart">Add to card</p>
       <p>{{prods.price}} Ksh</p>
+
     </div>
   </div>
 </div>
