--- a/src/app/product-list/product-list.component.css
+++ b/src/app/product-list/product-list.component.css
@@ -11,9 +11,9 @@
  margin: 1%;
 }
 .card:hover{
-  box-shadow:0.0 2px 2px rgba(190, 185, 185, 0.5);
+  box-shadow:0.0 2px 2px rgba(196, 190, 190, 0.5);
   cursor: pointer;
-  background-color: rgb(233, 233, 225);
+  background-color: rgb(230, 230, 207);
 }
 .img
 img{
@@ -64,4 +64,16 @@ p{
   margin-top: -6%;
   margin-left: -3%;
 }
+.addtocart{
+  position: absolute;
+  font-weight: bolder;
+  font-size: large;
+  color: white;
+margin-left: 5%;
+margin-right: 5%;
+margin-top:-5%;
+
+
+}
+
 /*  */
