--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -17,8 +17,9 @@
     </div>
     <div class="card-footer">
       <h3>{{prods.name}}</h3>
-      <p class="addtocart">Add to card</p>
       <p>{{prods.price}} Ksh</p>
+      <p class="addtocart">Add to cart</p>
+
 
     </div>
   </div>
