--- a/src/app/product-list/product-list.component.css
+++ b/src/app/product-list/product-list.component.css
@@ -3,15 +3,15 @@
   background-color: aqua;
 }
 .card{
- width: 17%;
+ width: 16%;
  height: auto;
- border: 1px solid #ccc;
+ border: 1px solid #e7e5e5;
  border-radius: 10px;
  transition: 0.9;
  margin: 1%;
 }
 .card:hover{
-  box-shadow:0.0 2px 2px rgba(196, 190, 190, 0.5);
+  box-shadow:0.0 2px 2px rgba(245, 243, 243, 0.5);
   cursor: pointer;
   background-color: rgb(230, 230, 207);
 }
@@ -64,16 +64,6 @@ p{
   margin-top: -6%;
   margin-left: -3%;
 }
-.addtocart{
-  position: absolute;
-  font-weight: bolder;
-  font-size: large;
-  color: white;
-margin-left: 5%;
-margin-right: 5%;
-margin-top:-5%;
 
-
-}
 
 /*  */
